# serializer version: 1
# name: test_cloud_all_sensors[climate.bedroom-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 28.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 4.0,
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'boost',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.bedroom',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Bedroom',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:radiator',
    'original_name': 'Bedroom',
    'platform': 'geniushub',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 401>,
    'translation_key': None,
    'unique_id': '01J71MQF0EC62D620DGYNG2R8H_zone_29',
    'unit_of_measurement': None,
  })
# ---
# name: test_cloud_all_sensors[climate.bedroom-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 21.5,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Bedroom',
      <ClimateEntityStateAttribute.HVAC_ACTION: 'hvac_action'>: <HVACAction.IDLE: 'idle'>,
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:radiator',
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 28.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 4.0,
      <ClimateEntityStateAttribute.PRESET_MODE: 'preset_mode'>: None,
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'boost',
      ]),
      'status': dict({
        'mode': 'off',
        'output': 0,
        'override': dict({
          'duration': 0,
          'setpoint': 23.5,
        }),
        'temperature': 21.5,
        'type': 'radiator',
      }),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 401>,
      <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: 4,
    }),
    'context': <ANY>,
    'entity_id': 'climate.bedroom',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_cloud_all_sensors[climate.ensuite-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 28.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 4.0,
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'activity',
        'boost',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.ensuite',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Ensuite',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:radiator',
    'original_name': 'Ensuite',
    'platform': 'geniushub',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 401>,
    'translation_key': None,
    'unique_id': '01J71MQF0EC62D620DGYNG2R8H_zone_5',
    'unit_of_measurement': None,
  })
# ---
# name: test_cloud_all_sensors[climate.ensuite-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 21,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Ensuite',
      <ClimateEntityStateAttribute.HVAC_ACTION: 'hvac_action'>: <HVACAction.IDLE: 'idle'>,
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:radiator',
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 28.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 4.0,
      <ClimateEntityStateAttribute.PRESET_MODE: 'preset_mode'>: None,
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'activity',
        'boost',
      ]),
      'status': dict({
        'mode': 'off',
        'output': 0,
        'occupied': 'False',
        'override': dict({
          'duration': 0,
          'setpoint': 28,
        }),
        'temperature': 21,
        'type': 'radiator',
      }),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 401>,
      <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: 4,
    }),
    'context': <ANY>,
    'entity_id': 'climate.ensuite',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_cloud_all_sensors[climate.guest_room-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 28.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 4.0,
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'activity',
        'boost',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.guest_room',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Guest room',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:radiator',
    'original_name': 'Guest room',
    'platform': 'geniushub',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 401>,
    'translation_key': None,
    'unique_id': '01J71MQF0EC62D620DGYNG2R8H_zone_7',
    'unit_of_measurement': None,
  })
# ---
# name: test_cloud_all_sensors[climate.guest_room-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 21,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Guest room',
      <ClimateEntityStateAttribute.HVAC_ACTION: 'hvac_action'>: <HVACAction.IDLE: 'idle'>,
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:radiator',
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 28.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 4.0,
      <ClimateEntityStateAttribute.PRESET_MODE: 'preset_mode'>: None,
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'activity',
        'boost',
      ]),
      'status': dict({
        'mode': 'off',
        'output': 0,
        'occupied': 'True',
        'override': dict({
          'duration': 0,
          'setpoint': 20,
        }),
        'temperature': 21,
        'type': 'radiator',
      }),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 401>,
      <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: 4,
    }),
    'context': <ANY>,
    'entity_id': 'climate.guest_room',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_cloud_all_sensors[climate.hall-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 28.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 4.0,
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'activity',
        'boost',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.hall',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Hall',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:radiator',
    'original_name': 'Hall',
    'platform': 'geniushub',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 401>,
    'translation_key': None,
    'unique_id': '01J71MQF0EC62D620DGYNG2R8H_zone_2',
    'unit_of_measurement': None,
  })
# ---
# name: test_cloud_all_sensors[climate.hall-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 21,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Hall',
      <ClimateEntityStateAttribute.HVAC_ACTION: 'hvac_action'>: <HVACAction.IDLE: 'idle'>,
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:radiator',
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 28.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 4.0,
      <ClimateEntityStateAttribute.PRESET_MODE: 'preset_mode'>: None,
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'activity',
        'boost',
      ]),
      'status': dict({
        'mode': 'off',
        'output': 0,
        'occupied': 'False',
        'override': dict({
          'duration': 0,
          'setpoint': 20,
        }),
        'temperature': 21,
        'type': 'radiator',
      }),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 401>,
      <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: 4,
    }),
    'context': <ANY>,
    'entity_id': 'climate.hall',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_cloud_all_sensors[climate.kitchen-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 28.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 4.0,
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'activity',
        'boost',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.kitchen',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Kitchen',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:radiator',
    'original_name': 'Kitchen',
    'platform': 'geniushub',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 401>,
    'translation_key': None,
    'unique_id': '01J71MQF0EC62D620DGYNG2R8H_zone_3',
    'unit_of_measurement': None,
  })
# ---
# name: test_cloud_all_sensors[climate.kitchen-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 21.5,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Kitchen',
      <ClimateEntityStateAttribute.HVAC_ACTION: 'hvac_action'>: <HVACAction.IDLE: 'idle'>,
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:radiator',
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 28.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 4.0,
      <ClimateEntityStateAttribute.PRESET_MODE: 'preset_mode'>: None,
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'activity',
        'boost',
      ]),
      'status': dict({
        'mode': 'off',
        'output': 0,
        'occupied': 'False',
        'override': dict({
          'duration': 0,
          'setpoint': 20,
        }),
        'temperature': 21.5,
        'type': 'radiator',
      }),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 401>,
      <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: 4,
    }),
    'context': <ANY>,
    'entity_id': 'climate.kitchen',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_cloud_all_sensors[climate.lounge-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 28.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 4.0,
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'boost',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.lounge',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Lounge',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:radiator',
    'original_name': 'Lounge',
    'platform': 'geniushub',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 401>,
    'translation_key': None,
    'unique_id': '01J71MQF0EC62D620DGYNG2R8H_zone_1',
    'unit_of_measurement': None,
  })
# ---
# name: test_cloud_all_sensors[climate.lounge-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 20,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Lounge',
      <ClimateEntityStateAttribute.HVAC_ACTION: 'hvac_action'>: <HVACAction.IDLE: 'idle'>,
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:radiator',
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 28.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 4.0,
      <ClimateEntityStateAttribute.PRESET_MODE: 'preset_mode'>: None,
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'boost',
      ]),
      'status': dict({
        'mode': 'off',
        'output': 0,
        'override': dict({
          'duration': 0,
          'setpoint': 20,
        }),
        'temperature': 20,
        'type': 'radiator',
      }),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 401>,
      <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: 4,
    }),
    'context': <ANY>,
    'entity_id': 'climate.lounge',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_cloud_all_sensors[climate.study-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 28.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 4.0,
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'activity',
        'boost',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.study',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Study',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:radiator',
    'original_name': 'Study',
    'platform': 'geniushub',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 401>,
    'translation_key': None,
    'unique_id': '01J71MQF0EC62D620DGYNG2R8H_zone_30',
    'unit_of_measurement': None,
  })
# ---
# name: test_cloud_all_sensors[climate.study-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 22,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Study',
      <ClimateEntityStateAttribute.HVAC_ACTION: 'hvac_action'>: <HVACAction.IDLE: 'idle'>,
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:radiator',
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 28.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 4.0,
      <ClimateEntityStateAttribute.PRESET_MODE: 'preset_mode'>: None,
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'activity',
        'boost',
      ]),
      'status': dict({
        'mode': 'off',
        'output': 0,
        'occupied': 'False',
        'override': dict({
          'duration': 0,
          'setpoint': 28,
        }),
        'temperature': 22,
        'type': 'radiator',
      }),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 401>,
      <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: 4,
    }),
    'context': <ANY>,
    'entity_id': 'climate.study',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
